--- a/packages/textfield/package.json
+++ b/packages/textfield/package.json
@@ -36,7 +36,8 @@
     "@smui/common": "^2.0.0-beta.1",
     "@smui/floating-label": "^2.0.0-beta.1",
     "@smui/line-ripple": "^2.0.0-beta.1",
-    "@smui/notched-outline": "^2.0.0-beta.1"
+    "@smui/notched-outline": "^2.0.0-beta.1",
+    "@smui/ripple": "^2.0.0-beta.1"
   },
   "devDependencies": {
     "sass": "^1.32.8"
