--- a/packages/slider/package.json
+++ b/packages/slider/package.json
@@ -28,6 +28,7 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
+    "@material/dom": "^10.0.0",
     "@material/slider": "^10.0.0",
     "@smui/common": "^3.0.0-beta.2",
     "@smui/ripple": "^3.0.0-beta.2"
