--- a/site/package.json
+++ b/site/package.json
@@ -116,6 +116,7 @@
     "@smui/tab-scroller": "file:../packages/tab-scroller",
     "@smui/textfield": "file:../packages/textfield",
     "@smui/top-app-bar": "file:../packages/top-app-bar",
+    "@smui/touch-target": "file:../packages/touch-target",
     "npm-run-all": "^4.1.5",
     "postcss-scss": "^3.0.5",
     "rollup": "^2.44.0",
