--- a/site/package.json
+++ b/site/package.json
@@ -119,8 +119,10 @@
     "@smui/tooltip": "file:../packages/tooltip",
     "@smui/top-app-bar": "file:../packages/top-app-bar",
     "@smui/touch-target": "file:../packages/touch-target",
+    "mdsvex": "^0.9.0",
     "npm-run-all": "^4.1.5",
     "postcss-scss": "^3.0.5",
+    "remark-slug": "^6.0.0",
     "rollup": "^2.44.0",
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-svelte": "^7.1.0",
