--- a/packages/snackbar/package.json
+++ b/packages/snackbar/package.json
@@ -33,7 +33,8 @@
     "@material/snackbar": "^10.0.0",
     "@smui/button": "^3.0.0-beta.12",
     "@smui/common": "^3.0.0-beta.12",
-    "@smui/icon-button": "^3.0.0-beta.12"
+    "@smui/icon-button": "^3.0.0-beta.12",
+    "@smui/ripple": "^3.0.0-beta.12"
   },
   "devDependencies": {
     "sass": "^1.32.8"
