--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svelte-material-ui",
-  "version": "3.0.0-beta.12",
+  "version": "3.0.0",
   "description": "Svelte Material UI Components",
   "keywords": [
     "svelte",
@@ -26,44 +26,44 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@smui/banner": "3.0.0-beta.12",
-    "@smui/button": "3.0.0-beta.12",
-    "@smui/card": "3.0.0-beta.12",
-    "@smui/checkbox": "3.0.0-beta.12",
-    "@smui/chips": "3.0.0-beta.12",
-    "@smui/circular-progress": "3.0.0-beta.12",
-    "@smui/common": "3.0.0-beta.12",
-    "@smui/data-table": "3.0.0-beta.12",
-    "@smui/dialog": "3.0.0-beta.12",
-    "@smui/drawer": "3.0.0-beta.12",
-    "@smui/fab": "3.0.0-beta.12",
-    "@smui/floating-label": "3.0.0-beta.12",
-    "@smui/form-field": "3.0.0-beta.12",
-    "@smui/icon-button": "3.0.0-beta.12",
-    "@smui/image-list": "3.0.0-beta.12",
-    "@smui/layout-grid": "3.0.0-beta.12",
-    "@smui/line-ripple": "3.0.0-beta.12",
-    "@smui/linear-progress": "3.0.0-beta.12",
-    "@smui/list": "3.0.0-beta.12",
-    "@smui/menu": "3.0.0-beta.12",
-    "@smui/menu-surface": "3.0.0-beta.12",
-    "@smui/notched-outline": "3.0.0-beta.12",
-    "@smui/paper": "3.0.0-beta.12",
-    "@smui/radio": "3.0.0-beta.12",
-    "@smui/ripple": "3.0.0-beta.12",
-    "@smui/segmented-button": "3.0.0-beta.12",
-    "@smui/select": "3.0.0-beta.12",
-    "@smui/slider": "3.0.0-beta.12",
-    "@smui/snackbar": "3.0.0-beta.12",
-    "@smui/switch": "3.0.0-beta.12",
-    "@smui/tab": "3.0.0-beta.12",
-    "@smui/tab-bar": "3.0.0-beta.12",
-    "@smui/tab-indicator": "3.0.0-beta.12",
-    "@smui/tab-scroller": "3.0.0-beta.12",
-    "@smui/textfield": "3.0.0-beta.12",
-    "@smui/tooltip": "3.0.0-beta.12",
-    "@smui/top-app-bar": "3.0.0-beta.12",
-    "@smui/touch-target": "3.0.0-beta.12"
+    "@smui/banner": "3.0.0",
+    "@smui/button": "3.0.0",
+    "@smui/card": "3.0.0",
+    "@smui/checkbox": "3.0.0",
+    "@smui/chips": "3.0.0",
+    "@smui/circular-progress": "3.0.0",
+    "@smui/common": "3.0.0",
+    "@smui/data-table": "3.0.0",
+    "@smui/dialog": "3.0.0",
+    "@smui/drawer": "3.0.0",
+    "@smui/fab": "3.0.0",
+    "@smui/floating-label": "3.0.0",
+    "@smui/form-field": "3.0.0",
+    "@smui/icon-button": "3.0.0",
+    "@smui/image-list": "3.0.0",
+    "@smui/layout-grid": "3.0.0",
+    "@smui/line-ripple": "3.0.0",
+    "@smui/linear-progress": "3.0.0",
+    "@smui/list": "3.0.0",
+    "@smui/menu": "3.0.0",
+    "@smui/menu-surface": "3.0.0",
+    "@smui/notched-outline": "3.0.0",
+    "@smui/paper": "3.0.0",
+    "@smui/radio": "3.0.0",
+    "@smui/ripple": "3.0.0",
+    "@smui/segmented-button": "3.0.0",
+    "@smui/select": "3.0.0",
+    "@smui/slider": "3.0.0",
+    "@smui/snackbar": "3.0.0",
+    "@smui/switch": "3.0.0",
+    "@smui/tab": "3.0.0",
+    "@smui/tab-bar": "3.0.0",
+    "@smui/tab-indicator": "3.0.0",
+    "@smui/tab-scroller": "3.0.0",
+    "@smui/textfield": "3.0.0",
+    "@smui/tooltip": "3.0.0",
+    "@smui/top-app-bar": "3.0.0",
+    "@smui/touch-target": "3.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.0.1",
