--- a/package.json
+++ b/package.json
@@ -68,6 +68,90 @@
   "devDependencies": {
     "@commitlint/cli": "^12.0.1",
     "@commitlint/config-conventional": "^12.0.1",
+    "@material/animation": "^10.0.0",
+    "@material/banner": "^10.0.0",
+    "@material/button": "^10.0.0",
+    "@material/card": "^10.0.0",
+    "@material/checkbox": "^10.0.0",
+    "@material/chips": "^10.0.0",
+    "@material/circular-progress": "^10.0.0",
+    "@material/data-table": "^10.0.0",
+    "@material/density": "^10.0.0",
+    "@material/dialog": "^10.0.0",
+    "@material/dom": "^10.0.0",
+    "@material/drawer": "^10.0.0",
+    "@material/elevation": "^10.0.0",
+    "@material/fab": "^10.0.0",
+    "@material/feature-targeting": "^10.0.0",
+    "@material/floating-label": "^10.0.0",
+    "@material/form-field": "^10.0.0",
+    "@material/icon-button": "^10.0.0",
+    "@material/image-list": "^10.0.0",
+    "@material/layout-grid": "^10.0.0",
+    "@material/line-ripple": "^10.0.0",
+    "@material/linear-progress": "^10.0.0",
+    "@material/list": "^10.0.0",
+    "@material/menu": "^10.0.0",
+    "@material/menu-surface": "^10.0.0",
+    "@material/notched-outline": "^10.0.0",
+    "@material/progress-indicator": "^10.0.0",
+    "@material/radio": "^10.0.0",
+    "@material/ripple": "^10.0.0",
+    "@material/rtl": "^10.0.0",
+    "@material/segmented-button": "^10.0.0",
+    "@material/select": "^10.0.0",
+    "@material/shape": "^10.0.0",
+    "@material/slider": "^10.0.0",
+    "@material/snackbar": "^10.0.0",
+    "@material/switch": "^10.0.0",
+    "@material/tab": "^10.0.0",
+    "@material/tab-bar": "^10.0.0",
+    "@material/tab-indicator": "^10.0.0",
+    "@material/tab-scroller": "^10.0.0",
+    "@material/textfield": "^10.0.0",
+    "@material/theme": "^10.0.0",
+    "@material/tooltip": "^10.0.0",
+    "@material/top-app-bar": "^10.0.0",
+    "@material/touch-target": "^10.0.0",
+    "@material/typography": "^10.0.0",
+    "@smui/banner": "file:packages/banner",
+    "@smui/button": "file:packages/button",
+    "@smui/card": "file:packages/card",
+    "@smui/checkbox": "file:packages/checkbox",
+    "@smui/chips": "file:packages/chips",
+    "@smui/circular-progress": "file:packages/circular-progress",
+    "@smui/common": "file:packages/common",
+    "@smui/data-table": "file:packages/data-table",
+    "@smui/dialog": "file:packages/dialog",
+    "@smui/drawer": "file:packages/drawer",
+    "@smui/fab": "file:packages/fab",
+    "@smui/floating-label": "file:packages/floating-label",
+    "@smui/form-field": "file:packages/form-field",
+    "@smui/icon-button": "file:packages/icon-button",
+    "@smui/image-list": "file:packages/image-list",
+    "@smui/layout-grid": "file:packages/layout-grid",
+    "@smui/line-ripple": "file:packages/line-ripple",
+    "@smui/linear-progress": "file:packages/linear-progress",
+    "@smui/list": "file:packages/list",
+    "@smui/menu": "file:packages/menu",
+    "@smui/menu-surface": "file:packages/menu-surface",
+    "@smui/notched-outline": "file:packages/notched-outline",
+    "@smui/paper": "file:packages/paper",
+    "@smui/radio": "file:packages/radio",
+    "@smui/ripple": "file:packages/ripple",
+    "@smui/segmented-button": "file:packages/segmented-button",
+    "@smui/select": "file:packages/select",
+    "@smui/slider": "file:packages/slider",
+    "@smui/snackbar": "file:packages/snackbar",
+    "@smui/switch": "file:packages/switch",
+    "@smui/tab": "file:packages/tab",
+    "@smui/tab-bar": "file:packages/tab-bar",
+    "@smui/tab-indicator": "file:packages/tab-indicator",
+    "@smui/tab-scroller": "file:packages/tab-scroller",
+    "@smui/textfield": "file:packages/textfield",
+    "@smui/tooltip": "file:packages/tooltip",
+    "@smui/top-app-bar": "file:packages/top-app-bar",
+    "@smui/touch-target": "file:packages/touch-target",
     "husky": "^5.2.0",
     "lerna": "^4.0.0",
     "prettier": "2.2.1",
