feat: new easy styling method

--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
   ],
   "scripts": {
     "pages": "git checkout site -- && git rebase master && cd site && npm install && npm run export && cd .. && git add . && git commit -m 'chore: update built files' && git push origin $(git subtree split --prefix site/dist site):gh-pages --force && git reset --hard HEAD^ && git push --force origin site && git checkout master",
+    "prepare": "sass --no-source-map -I node_modules _style.scss bare.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "files": [],
+  "files": [
+    "_index.scss",
+    "_style.scss",
+    "base.css"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hperrin/svelte-material-ui.git"
@@ -156,6 +161,7 @@
     "lerna": "^4.0.0",
     "prettier": "2.2.1",
     "prettier-plugin-svelte": "^2.2.0",
+    "sass": "^1.32.8",
     "svelte": "^3.35.0"
   }
 }
