--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svelte-material-ui",
-  "version": "3.0.3",
+  "version": "3.1.0",
   "description": "Svelte Material UI Components",
   "keywords": [
     "svelte",
@@ -13,7 +13,7 @@
   ],
   "scripts": {
     "pages": "git checkout site -- && git rebase master && cd site && npm install && npm run export && cd .. && git add . && git commit -m 'chore: update built files' && git push origin $(git subtree split --prefix site/dist site):gh-pages --force && git reset --hard HEAD^ && git push --force origin site && git checkout master",
-    "prepare-off": "sass --no-source-map -I node_modules _style.scss bare.css",
+    "prepare": "sass --no-source-map -I node_modules _style.scss bare.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "files": [
@@ -31,44 +31,44 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@smui/banner": "3.0.2",
-    "@smui/button": "3.0.3",
-    "@smui/card": "3.0.3",
-    "@smui/checkbox": "3.0.3",
-    "@smui/chips": "3.0.3",
-    "@smui/circular-progress": "3.0.2",
-    "@smui/common": "3.0.2",
-    "@smui/data-table": "3.0.3",
-    "@smui/dialog": "3.0.2",
-    "@smui/drawer": "3.0.2",
-    "@smui/fab": "3.0.3",
-    "@smui/floating-label": "3.0.2",
-    "@smui/form-field": "3.0.2",
-    "@smui/icon-button": "3.0.3",
-    "@smui/image-list": "3.0.2",
-    "@smui/layout-grid": "3.0.2",
-    "@smui/line-ripple": "3.0.2",
-    "@smui/linear-progress": "3.0.2",
-    "@smui/list": "3.0.3",
-    "@smui/menu": "3.0.3",
-    "@smui/menu-surface": "3.0.2",
-    "@smui/notched-outline": "3.0.2",
-    "@smui/paper": "3.0.2",
-    "@smui/radio": "3.0.3",
-    "@smui/ripple": "3.0.3",
-    "@smui/segmented-button": "3.0.3",
-    "@smui/select": "3.0.3",
-    "@smui/slider": "3.0.3",
-    "@smui/snackbar": "3.0.3",
-    "@smui/switch": "3.0.3",
-    "@smui/tab": "3.0.2",
-    "@smui/tab-bar": "3.0.2",
-    "@smui/tab-indicator": "3.0.2",
-    "@smui/tab-scroller": "3.0.2",
-    "@smui/textfield": "3.0.3",
-    "@smui/tooltip": "3.0.2",
-    "@smui/top-app-bar": "3.0.2",
-    "@smui/touch-target": "3.0.2"
+    "@smui/banner": "3.1.0",
+    "@smui/button": "3.1.0",
+    "@smui/card": "3.1.0",
+    "@smui/checkbox": "3.1.0",
+    "@smui/chips": "3.1.0",
+    "@smui/circular-progress": "3.1.0",
+    "@smui/common": "3.1.0",
+    "@smui/data-table": "3.1.0",
+    "@smui/dialog": "3.1.0",
+    "@smui/drawer": "3.1.0",
+    "@smui/fab": "3.1.0",
+    "@smui/floating-label": "3.1.0",
+    "@smui/form-field": "3.1.0",
+    "@smui/icon-button": "3.1.0",
+    "@smui/image-list": "3.1.0",
+    "@smui/layout-grid": "3.1.0",
+    "@smui/line-ripple": "3.1.0",
+    "@smui/linear-progress": "3.1.0",
+    "@smui/list": "3.1.0",
+    "@smui/menu": "3.1.0",
+    "@smui/menu-surface": "3.1.0",
+    "@smui/notched-outline": "3.1.0",
+    "@smui/paper": "3.1.0",
+    "@smui/radio": "3.1.0",
+    "@smui/ripple": "3.1.0",
+    "@smui/segmented-button": "3.1.0",
+    "@smui/select": "3.1.0",
+    "@smui/slider": "3.1.0",
+    "@smui/snackbar": "3.1.0",
+    "@smui/switch": "3.1.0",
+    "@smui/tab": "3.1.0",
+    "@smui/tab-bar": "3.1.0",
+    "@smui/tab-indicator": "3.1.0",
+    "@smui/tab-scroller": "3.1.0",
+    "@smui/textfield": "3.1.0",
+    "@smui/tooltip": "3.1.0",
+    "@smui/top-app-bar": "3.1.0",
+    "@smui/touch-target": "3.1.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.0.1",
