chore: update site package

--- a/site/package.json
+++ b/site/package.json
@@ -7,6 +7,7 @@
     "dev": "svelte-kit dev",
     "build": "svelte-kit build",
     "start": "svelte-kit start",
+    "prepare": "find ../node_modules/@material/ -name \"*.js.map\" -type f -delete",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,52 +20,6 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@material/animation": "^11.0.0",
-    "@material/banner": "^11.0.0",
-    "@material/button": "^11.0.0",
-    "@material/card": "^11.0.0",
-    "@material/checkbox": "^11.0.0",
-    "@material/chips": "^11.0.0",
-    "@material/circular-progress": "^11.0.0",
-    "@material/data-table": "^11.0.0",
-    "@material/density": "^11.0.0",
-    "@material/dialog": "^11.0.0",
-    "@material/dom": "^11.0.0",
-    "@material/drawer": "^11.0.0",
-    "@material/elevation": "^11.0.0",
-    "@material/fab": "^11.0.0",
-    "@material/feature-targeting": "^11.0.0",
-    "@material/floating-label": "^11.0.0",
-    "@material/form-field": "^11.0.0",
-    "@material/icon-button": "^11.0.0",
-    "@material/image-list": "^11.0.0",
-    "@material/layout-grid": "^11.0.0",
-    "@material/line-ripple": "^11.0.0",
-    "@material/linear-progress": "^11.0.0",
-    "@material/list": "^11.0.0",
-    "@material/menu": "^11.0.0",
-    "@material/menu-surface": "^11.0.0",
-    "@material/notched-outline": "^11.0.0",
-    "@material/progress-indicator": "^11.0.0",
-    "@material/radio": "^11.0.0",
-    "@material/ripple": "^11.0.0",
-    "@material/rtl": "^11.0.0",
-    "@material/segmented-button": "^11.0.0",
-    "@material/select": "^11.0.0",
-    "@material/shape": "^11.0.0",
-    "@material/slider": "^11.0.0",
-    "@material/snackbar": "^11.0.0",
-    "@material/switch": "^11.0.0",
-    "@material/tab": "^11.0.0",
-    "@material/tab-bar": "^11.0.0",
-    "@material/tab-indicator": "^11.0.0",
-    "@material/tab-scroller": "^11.0.0",
-    "@material/textfield": "^11.0.0",
-    "@material/theme": "^11.0.0",
-    "@material/tooltip": "^11.0.0",
-    "@material/top-app-bar": "^11.0.0",
-    "@material/touch-target": "^11.0.0",
-    "@material/typography": "^11.0.0",
     "@mdi/js": "^5.9.55",
     "@smui/banner": "file:../packages/banner",
     "@smui/button": "file:../packages/button",
@@ -112,6 +67,7 @@
     "mdsvex": "^0.9.0",
     "remark-slug": "^6.0.0",
     "sass": "^1.32.11",
+    "smui-theme": "file:../packages/smui-theme",
     "svelte": "^3.37.0",
     "vite": "^2.2.1"
   }
