--- a/package.json
+++ b/package.json
@@ -29,44 +29,44 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@smui/banner": "4.0.0",
-    "@smui/button": "4.0.0",
-    "@smui/card": "4.0.0",
-    "@smui/checkbox": "4.0.0",
-    "@smui/chips": "4.0.0",
-    "@smui/circular-progress": "4.0.0",
-    "@smui/common": "4.0.0",
-    "@smui/data-table": "4.0.0",
-    "@smui/dialog": "4.0.0",
-    "@smui/drawer": "4.0.0",
-    "@smui/fab": "4.0.0",
-    "@smui/floating-label": "4.0.0",
-    "@smui/form-field": "4.0.0",
-    "@smui/icon-button": "4.0.0",
-    "@smui/image-list": "4.0.0",
-    "@smui/layout-grid": "4.0.0",
-    "@smui/line-ripple": "4.0.0",
-    "@smui/linear-progress": "4.0.0",
-    "@smui/list": "4.0.0",
-    "@smui/menu": "4.0.0",
-    "@smui/menu-surface": "4.0.0",
-    "@smui/notched-outline": "4.0.0",
-    "@smui/paper": "4.0.0",
-    "@smui/radio": "4.0.0",
-    "@smui/ripple": "4.0.0",
-    "@smui/segmented-button": "4.0.0",
-    "@smui/select": "4.0.0",
-    "@smui/slider": "4.0.0",
-    "@smui/snackbar": "4.0.0",
-    "@smui/switch": "4.0.0",
-    "@smui/tab": "4.0.0",
-    "@smui/tab-bar": "4.0.0",
-    "@smui/tab-indicator": "4.0.0",
-    "@smui/tab-scroller": "4.0.0",
-    "@smui/textfield": "4.0.0",
-    "@smui/tooltip": "4.0.0",
-    "@smui/top-app-bar": "4.0.0",
-    "@smui/touch-target": "4.0.0"
+    "@smui/banner": "file:packages/banner",
+    "@smui/button": "file:packages/button",
+    "@smui/card": "file:packages/card",
+    "@smui/checkbox": "file:packages/checkbox",
+    "@smui/chips": "file:packages/chips",
+    "@smui/circular-progress": "file:packages/circular-progress",
+    "@smui/common": "file:packages/common",
+    "@smui/data-table": "file:packages/data-table",
+    "@smui/dialog": "file:packages/dialog",
+    "@smui/drawer": "file:packages/drawer",
+    "@smui/fab": "file:packages/fab",
+    "@smui/floating-label": "file:packages/floating-label",
+    "@smui/form-field": "file:packages/form-field",
+    "@smui/icon-button": "file:packages/icon-button",
+    "@smui/image-list": "file:packages/image-list",
+    "@smui/layout-grid": "file:packages/layout-grid",
+    "@smui/line-ripple": "file:packages/line-ripple",
+    "@smui/linear-progress": "file:packages/linear-progress",
+    "@smui/list": "file:packages/list",
+    "@smui/menu": "file:packages/menu",
+    "@smui/menu-surface": "file:packages/menu-surface",
+    "@smui/notched-outline": "file:packages/notched-outline",
+    "@smui/paper": "file:packages/paper",
+    "@smui/radio": "file:packages/radio",
+    "@smui/ripple": "file:packages/ripple",
+    "@smui/segmented-button": "file:packages/segmented-button",
+    "@smui/select": "file:packages/select",
+    "@smui/slider": "file:packages/slider",
+    "@smui/snackbar": "file:packages/snackbar",
+    "@smui/switch": "file:packages/switch",
+    "@smui/tab": "file:packages/tab",
+    "@smui/tab-bar": "file:packages/tab-bar",
+    "@smui/tab-indicator": "file:packages/tab-indicator",
+    "@smui/tab-scroller": "file:packages/tab-scroller",
+    "@smui/textfield": "file:packages/textfield",
+    "@smui/tooltip": "file:packages/tooltip",
+    "@smui/top-app-bar": "file:packages/top-app-bar",
+    "@smui/touch-target": "file:packages/touch-target"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.0.1",
