--- a/site/package.json
+++ b/site/package.json
@@ -8,7 +8,7 @@
     "build": "svelte-kit build",
     "start": "svelte-kit start",
     "prepare": "npm run vite-workaround && npm run smui-theme-light && npm run smui-theme-dark && npm run site-light && npm run site-dark",
-    "vite-workaround": "find ../node_modules/@material/ -name \"*.js.map\" -type f -delete",
+    "vite-workaround": "find node_modules/@material/ -name \"*.js.map\" -type f -delete && find ../node_modules/@material/ -name \"*.js.map\" -type f -delete",
     "smui-theme-light": "smui-theme compile static/smui.css -s expanded -i src/theme",
     "smui-theme-dark": "smui-theme compile static/smui-dark.css -s expanded -i src/theme/dark",
     "site-light": "sass --no-source-map -I src/theme -I node_modules src/site.scss static/site.css",
