--- a/package.json
+++ b/package.json
@@ -69,8 +69,8 @@
     "@smui/touch-target": "file:packages/touch-target"
   },
   "devDependencies": {
-    "@commitlint/cli": "^12.0.1",
-    "@commitlint/config-conventional": "^12.0.1",
+    "@commitlint/cli": "^12.1.1",
+    "@commitlint/config-conventional": "^12.1.1",
     "@material/animation": "^11.0.0",
     "@material/banner": "^11.0.0",
     "@material/button": "^11.0.0",
@@ -117,12 +117,11 @@
     "@material/top-app-bar": "^11.0.0",
     "@material/touch-target": "^11.0.0",
     "@material/typography": "^11.0.0",
-    "husky": "^5.2.0",
+    "husky": "^6.0.0",
     "lerna": "^4.0.0",
     "prettier": "2.2.1",
     "prettier-plugin-svelte": "^2.2.0",
-    "sass": "^1.32.8",
-    "smui-theme": "file:packages/smui-theme",
-    "svelte": "^3.35.0"
+    "sass": "^1.32.11",
+    "smui-theme": "file:packages/smui-theme"
   }
 }
