--- a/site/package.json
+++ b/site/package.json
@@ -24,7 +24,17 @@
     "url": "https://github.com/hperrin/svelte-material-ui/issues"
   },
   "license": "Apache-2.0",
-  "dependencies": {
+  "devDependencies": {
+    "@material/button": "^11.0.0",
+    "@material/circular-progress": "^11.0.0",
+    "@material/elevation": "^11.0.0",
+    "@material/image-list": "^11.0.0",
+    "@material/linear-progress": "^11.0.0",
+    "@material/ripple": "^11.0.0",
+    "@material/shape": "^11.0.0",
+    "@material/theme": "^11.0.0",
+    "@material/top-app-bar": "^11.0.0",
+    "@material/typography": "^11.0.0",
     "@mdi/js": "^5.9.55",
     "@smui/banner": "file:../packages/banner",
     "@smui/button": "file:../packages/button",
@@ -63,18 +73,7 @@
     "@smui/textfield": "file:../packages/textfield",
     "@smui/tooltip": "file:../packages/tooltip",
     "@smui/top-app-bar": "file:../packages/top-app-bar",
-    "@smui/touch-target": "file:../packages/touch-target"
-  },
-  "devDependencies": {
-    "@material/button": "^11.0.0",
-    "@material/circular-progress": "^11.0.0",
-    "@material/elevation": "^11.0.0",
-    "@material/image-list": "^11.0.0",
-    "@material/linear-progress": "^11.0.0",
-    "@material/shape": "^11.0.0",
-    "@material/theme": "^11.0.0",
-    "@material/top-app-bar": "^11.0.0",
-    "@material/typography": "^11.0.0",
+    "@smui/touch-target": "file:../packages/touch-target",
     "@sveltejs/adapter-node": "^1.0.0-next.16",
     "@sveltejs/adapter-static": "next",
     "@sveltejs/kit": "next",
