--- a/packages/ripple/package.json
+++ b/packages/ripple/package.json
@@ -31,7 +31,8 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/dom": "^11.0.0",
-    "@material/ripple": "^11.0.0"
+    "@material/ripple": "^11.0.0",
+    "@smui/common": "^4.2.0"
   },
   "devDependencies": {
     "@tsconfig/svelte": "^2.0.1",
