feat: migrate menu surface and menu to typescript

--- a/packages/menu/package.json
+++ b/packages/menu/package.json
@@ -3,7 +3,8 @@
   "version": "4.2.0",
   "description": "Svelte Material UI - Menu",
   "type": "module",
-  "module": "index.js",
+  "module": "index.ts",
+  "types": "index.d.ts",
   "keywords": [
     "svelte",
     "svelte3",
@@ -37,6 +38,9 @@
     "@smui/menu-surface": "^4.2.0"
   },
   "devDependencies": {
-    "sass": "^1.32.11"
+    "@tsconfig/svelte": "^2.0.1",
+    "sass": "^1.32.11",
+    "tslib": "^2.3.1",
+    "typescript": "^4.4.2"
   }
 }
