--- a/packages/notched-outline/package.json
+++ b/packages/notched-outline/package.json
@@ -3,7 +3,7 @@
   "version": "4.2.0",
   "description": "Svelte Material UI - Notched Outline",
   "type": "module",
-  "module": "index.js",
+  "module": "index.ts",
   "keywords": [
     "svelte",
     "svelte3",
@@ -31,9 +31,13 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/notched-outline": "^11.0.0",
-    "@smui/common": "^4.2.0"
+    "@smui/common": "^4.2.0",
+    "@smui/floating-label": "^4.2.0"
   },
   "devDependencies": {
-    "sass": "^1.32.11"
+    "@tsconfig/svelte": "^2.0.1",
+    "sass": "^1.32.11",
+    "tslib": "^2.3.1",
+    "typescript": "^4.4.2"
   }
 }
