--- a/packages/tab-bar/package.json
+++ b/packages/tab-bar/package.json
@@ -3,7 +3,7 @@
   "version": "4.2.0",
   "description": "Svelte Material UI - Tab Bar",
   "type": "module",
-  "module": "index.js",
+  "module": "index.ts",
   "keywords": [
     "svelte",
     "svelte3",
@@ -32,9 +32,13 @@
   "dependencies": {
     "@material/tab-bar": "^11.0.0",
     "@smui/common": "^4.2.0",
+    "@smui/tab": "^4.2.0",
     "@smui/tab-scroller": "^4.2.0"
   },
   "devDependencies": {
-    "sass": "^1.32.11"
+    "@tsconfig/svelte": "^2.0.1",
+    "sass": "^1.32.11",
+    "tslib": "^2.3.1",
+    "typescript": "^4.4.2"
   }
 }
