chore: update packages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svelte-material-ui",
-  "version": "4.2.0",
+  "version": "5.0.0-beta.0",
   "description": "Svelte Material UI Components",
   "keywords": [
     "svelte",
@@ -34,44 +34,44 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@smui/banner": "4.2.0",
-    "@smui/button": "4.2.0",
-    "@smui/card": "4.2.0",
-    "@smui/checkbox": "4.2.0",
-    "@smui/chips": "4.2.0",
-    "@smui/circular-progress": "4.2.0",
-    "@smui/common": "4.2.0",
-    "@smui/data-table": "4.2.0",
-    "@smui/dialog": "4.2.0",
-    "@smui/drawer": "4.2.0",
-    "@smui/fab": "4.2.0",
-    "@smui/floating-label": "4.2.0",
-    "@smui/form-field": "4.2.0",
-    "@smui/icon-button": "4.2.0",
-    "@smui/image-list": "4.2.0",
-    "@smui/layout-grid": "4.2.0",
-    "@smui/line-ripple": "4.2.0",
-    "@smui/linear-progress": "4.2.0",
-    "@smui/list": "4.2.0",
-    "@smui/menu": "4.2.0",
-    "@smui/menu-surface": "4.2.0",
-    "@smui/notched-outline": "4.2.0",
-    "@smui/paper": "4.2.0",
-    "@smui/radio": "4.2.0",
-    "@smui/ripple": "4.2.0",
-    "@smui/segmented-button": "4.2.0",
-    "@smui/select": "4.2.0",
-    "@smui/slider": "4.2.0",
-    "@smui/snackbar": "4.2.0",
-    "@smui/switch": "4.2.0",
-    "@smui/tab": "4.2.0",
-    "@smui/tab-bar": "4.2.0",
-    "@smui/tab-indicator": "4.2.0",
-    "@smui/tab-scroller": "4.2.0",
-    "@smui/textfield": "4.2.0",
-    "@smui/tooltip": "4.2.0",
-    "@smui/top-app-bar": "4.2.0",
-    "@smui/touch-target": "4.2.0"
+    "@smui/banner": "5.0.0-beta.0",
+    "@smui/button": "5.0.0-beta.0",
+    "@smui/card": "5.0.0-beta.0",
+    "@smui/checkbox": "5.0.0-beta.0",
+    "@smui/chips": "5.0.0-beta.0",
+    "@smui/circular-progress": "5.0.0-beta.0",
+    "@smui/common": "5.0.0-beta.0",
+    "@smui/data-table": "5.0.0-beta.0",
+    "@smui/dialog": "5.0.0-beta.0",
+    "@smui/drawer": "5.0.0-beta.0",
+    "@smui/fab": "5.0.0-beta.0",
+    "@smui/floating-label": "5.0.0-beta.0",
+    "@smui/form-field": "5.0.0-beta.0",
+    "@smui/icon-button": "5.0.0-beta.0",
+    "@smui/image-list": "5.0.0-beta.0",
+    "@smui/layout-grid": "5.0.0-beta.0",
+    "@smui/line-ripple": "5.0.0-beta.0",
+    "@smui/linear-progress": "5.0.0-beta.0",
+    "@smui/list": "5.0.0-beta.0",
+    "@smui/menu": "5.0.0-beta.0",
+    "@smui/menu-surface": "5.0.0-beta.0",
+    "@smui/notched-outline": "5.0.0-beta.0",
+    "@smui/paper": "5.0.0-beta.0",
+    "@smui/radio": "5.0.0-beta.0",
+    "@smui/ripple": "5.0.0-beta.0",
+    "@smui/segmented-button": "5.0.0-beta.0",
+    "@smui/select": "5.0.0-beta.0",
+    "@smui/slider": "5.0.0-beta.0",
+    "@smui/snackbar": "5.0.0-beta.0",
+    "@smui/switch": "5.0.0-beta.0",
+    "@smui/tab": "5.0.0-beta.0",
+    "@smui/tab-bar": "5.0.0-beta.0",
+    "@smui/tab-indicator": "5.0.0-beta.0",
+    "@smui/tab-scroller": "5.0.0-beta.0",
+    "@smui/textfield": "5.0.0-beta.0",
+    "@smui/tooltip": "5.0.0-beta.0",
+    "@smui/top-app-bar": "5.0.0-beta.0",
+    "@smui/touch-target": "5.0.0-beta.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.1.1",
