--- a/packages/paper/package.json
+++ b/packages/paper/package.json
@@ -39,7 +39,8 @@
     "@material/shape": "^11.0.0",
     "@material/theme": "^11.0.0",
     "@material/typography": "^11.0.0",
-    "@smui/common": "^5.0.0-beta.0"
+    "@smui/common": "^5.0.0-beta.0",
+    "svelte2tsx": "^0.4.6"
   },
   "devDependencies": {
     "@tsconfig/svelte": "^2.0.1",
