--- a/packages/tab-bar/package.json
+++ b/packages/tab-bar/package.json
@@ -37,7 +37,8 @@
     "@material/tab-bar": "^11.0.0",
     "@smui/common": "^5.0.0-beta.0",
     "@smui/tab": "^5.0.0-beta.0",
-    "@smui/tab-scroller": "^5.0.0-beta.0"
+    "@smui/tab-scroller": "^5.0.0-beta.0",
+    "svelte2tsx": "^0.4.6"
   },
   "devDependencies": {
     "@tsconfig/svelte": "^2.0.1",
