--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -40,7 +40,8 @@
     "@material/ripple": "^11.0.0",
     "@material/theme": "^11.0.0",
     "@smui/common": "^5.0.0-beta.0",
-    "@smui/ripple": "^5.0.0-beta.0"
+    "@smui/ripple": "^5.0.0-beta.0",
+    "svelte2tsx": "^0.4.6"
   },
   "devDependencies": {
     "@tsconfig/svelte": "^2.0.1",
