--- a/packages/chips/package.json
+++ b/packages/chips/package.json
@@ -38,7 +38,8 @@
     "@material/dom": "^11.0.0",
     "@material/rtl": "^11.0.0",
     "@smui/common": "^5.0.0-beta.0",
-    "@smui/ripple": "^5.0.0-beta.0"
+    "@smui/ripple": "^5.0.0-beta.0",
+    "svelte2tsx": "^0.4.6"
   },
   "devDependencies": {
     "@tsconfig/svelte": "^2.0.1",
