--- a/packages/data-table/package.json
+++ b/packages/data-table/package.json
@@ -39,7 +39,8 @@
     "@smui/checkbox": "^5.0.0-beta.0",
     "@smui/common": "^5.0.0-beta.0",
     "@smui/icon-button": "^5.0.0-beta.0",
-    "@smui/ripple": "^5.0.0-beta.0"
+    "@smui/ripple": "^5.0.0-beta.0",
+    "svelte2tsx": "^0.4.6"
   },
   "devDependencies": {
     "@tsconfig/svelte": "^2.0.1",
