--- a/packages/dialog/package.json
+++ b/packages/dialog/package.json
@@ -37,7 +37,8 @@
     "@material/button": "^11.0.0",
     "@material/dialog": "^11.0.0",
     "@material/dom": "^11.0.0",
-    "@smui/common": "^5.0.0-beta.0"
+    "@smui/common": "^5.0.0-beta.0",
+    "svelte2tsx": "^0.4.6"
   },
   "devDependencies": {
     "@tsconfig/svelte": "^2.0.1",
