--- a/packages/linear-progress/package.json
+++ b/packages/linear-progress/package.json
@@ -35,7 +35,8 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/linear-progress": "^11.0.0",
-    "@smui/common": "^5.0.0-beta.0"
+    "@smui/common": "^5.0.0-beta.0",
+    "svelte2tsx": "^0.4.6"
   },
   "devDependencies": {
     "@tsconfig/svelte": "^2.0.1",
