--- a/packages/notched-outline/package.json
+++ b/packages/notched-outline/package.json
@@ -36,7 +36,8 @@
   "dependencies": {
     "@material/notched-outline": "^11.0.0",
     "@smui/common": "^5.0.0-beta.0",
-    "@smui/floating-label": "^5.0.0-beta.0"
+    "@smui/floating-label": "^5.0.0-beta.0",
+    "svelte2tsx": "^0.4.6"
   },
   "devDependencies": {
     "@tsconfig/svelte": "^2.0.1",
