--- a/packages/select/package.json
+++ b/packages/select/package.json
@@ -46,7 +46,8 @@
     "@smui/menu": "^5.0.0-beta.0",
     "@smui/menu-surface": "^5.0.0-beta.0",
     "@smui/notched-outline": "^5.0.0-beta.0",
-    "@smui/ripple": "^5.0.0-beta.0"
+    "@smui/ripple": "^5.0.0-beta.0",
+    "svelte2tsx": "^0.4.6"
   },
   "devDependencies": {
     "@tsconfig/svelte": "^2.0.1",
