--- a/packages/snackbar/package.json
+++ b/packages/snackbar/package.json
@@ -40,7 +40,8 @@
     "@smui/button": "^5.0.0-beta.0",
     "@smui/common": "^5.0.0-beta.0",
     "@smui/icon-button": "^5.0.0-beta.0",
-    "@smui/ripple": "^5.0.0-beta.0"
+    "@smui/ripple": "^5.0.0-beta.0",
+    "svelte2tsx": "^0.4.6"
   },
   "devDependencies": {
     "@tsconfig/svelte": "^2.0.1",
