--- a/packages/switch/package.json
+++ b/packages/switch/package.json
@@ -37,7 +37,8 @@
     "@material/density": "^11.0.0",
     "@material/switch": "^11.0.0",
     "@smui/common": "^5.0.0-beta.0",
-    "@smui/ripple": "^5.0.0-beta.0"
+    "@smui/ripple": "^5.0.0-beta.0",
+    "svelte2tsx": "^0.4.6"
   },
   "devDependencies": {
     "@tsconfig/svelte": "^2.0.1",
