--- a/packages/textfield/package.json
+++ b/packages/textfield/package.json
@@ -43,7 +43,8 @@
     "@smui/floating-label": "^5.0.0-beta.0",
     "@smui/line-ripple": "^5.0.0-beta.0",
     "@smui/notched-outline": "^5.0.0-beta.0",
-    "@smui/ripple": "^5.0.0-beta.0"
+    "@smui/ripple": "^5.0.0-beta.0",
+    "svelte2tsx": "^0.4.6"
   },
   "devDependencies": {
     "@tsconfig/svelte": "^2.0.1",
