--- a/packages/notched-outline/package.json
+++ b/packages/notched-outline/package.json
@@ -18,6 +18,7 @@
     "build": "npm run build:js && npm run build:sass",
     "build:js": "tsc",
     "build:sass": "sass --no-source-map -I node_modules -I ../../node_modules _style.scss bare.css",
+    "clean": "git status --ignored -u --porcelain . | grep -v node_modules/ | grep -e '^!! ' | sed 's/^!! packages\\/[a-z-]*\\///g' | tr '\\n' ' ' | xargs rm",
     "prepare": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
