fix: lock sass to the last working minor release
Fixes #334

--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -35,7 +35,7 @@
   "dependencies": {
     "@material/dom": "^11.0.0",
     "@tsconfig/svelte": "^2.0.1",
-    "sass": "^1.32.11",
+    "sass": "~1.39.2",
     "svelte": "^3.35.0",
     "svelte2tsx": "^0.4.6",
     "tslib": "^2.3.1",
