--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "lerna": "^4.0.0",
     "prettier": "~2.4.1",
     "prettier-plugin-svelte": "^2.4.0",
-    "sass": "^1.32.11",
+    "sass": "~1.39.2",
     "smui-theme": "file:packages/smui-theme",
     "svelte": "^3.35.0",
     "svelte-check": "^2.2.6"
