--- a/packages/layout-grid/package.json
+++ b/packages/layout-grid/package.json
@@ -41,7 +41,7 @@
   },
   "devDependencies": {
     "@tsconfig/svelte": "^2.0.1",
-    "sass": "^1.32.11",
+    "sass": "~1.39.2",
     "tslib": "^2.3.1",
     "typescript": "^4.4.2"
   }
