--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -81,7 +81,7 @@
     "@sveltejs/kit": "next",
     "mdsvex": "^0.9.0",
     "remark-slug": "^6.0.0",
-    "sass": "^1.32.11",
+    "sass": "~1.39.2",
     "smui-theme": "^5.0.0-beta.5",
     "svelte": "^3.35.0",
     "svelte-preprocess": "^4.9.2",
