--- a/packages/smui-theme/package.json
+++ b/packages/smui-theme/package.json
@@ -31,7 +31,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "node-fetch": "^2.6.1",
-    "sass": "^1.32.11",
+    "sass": "~1.39.2",
     "yargs": "^16.2.0"
   }
 }
