--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -38,7 +38,7 @@
     "@material/theme": "^13.0.0",
     "@material/top-app-bar": "^13.0.0",
     "@material/typography": "^13.0.0",
-    "@mdi/js": "^5.9.55",
+    "@mdi/js": "^6.5.95",
     "@smui/banner": "^5.0.0",
     "@smui/button": "^5.0.0",
     "@smui/card": "^5.0.0",
@@ -81,7 +81,7 @@
     "@sveltejs/kit": "next",
     "mdsvex": "^0.9.8",
     "remark-slug": "^7.0.1",
-    "sass": "~1.39.2",
+    "sass": "^1.43.4",
     "smui-theme": "^5.0.0",
     "svelte": "^3.35.0",
     "svelte-preprocess": "^4.9.8",
