--- a/packages/card/package.json
+++ b/packages/card/package.json
@@ -40,14 +40,14 @@
     "@smui/common": "^5.0.0",
     "@smui/icon-button": "^5.0.0",
     "@smui/ripple": "^5.0.0",
-    "svelte2tsx": "^0.4.6"
+    "svelte2tsx": "^0.4.8"
   },
   "devDependencies": {
     "@material/button": "^13.0.0",
     "@material/icon-button": "^13.0.0",
     "@tsconfig/svelte": "^2.0.1",
-    "sass": "~1.39.2",
+    "sass": "^1.43.4",
     "tslib": "^2.3.1",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.4"
   }
 }
