--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -32,13 +32,17 @@
     "url": "https://github.com/hperrin/svelte-material-ui/issues"
   },
   "license": "Apache-2.0",
-  "dependencies": {
-    "@material/dom": "^13.0.0",
+  "peerDependencies": {
+    "svelte": "^3.35.0"
+  },
+  "devDependencies": {
     "@tsconfig/svelte": "^2.0.1",
-    "sass": "~1.39.2",
-    "svelte": "^3.35.0",
-    "svelte2tsx": "^0.4.8",
+    "sass": "^1.43.4",
     "tslib": "^2.3.1",
     "typescript": "^4.4.4"
+  },
+  "dependencies": {
+    "@material/dom": "^13.0.0",
+    "svelte2tsx": "^0.4.8"
   }
 }
