--- a/packages/menu/package.json
+++ b/packages/menu/package.json
@@ -40,12 +40,12 @@
     "@smui/common": "^5.0.0",
     "@smui/list": "^5.0.0",
     "@smui/menu-surface": "^5.0.0",
-    "svelte2tsx": "^0.4.6"
+    "svelte2tsx": "^0.4.8"
   },
   "devDependencies": {
     "@tsconfig/svelte": "^2.0.1",
-    "sass": "~1.39.2",
+    "sass": "^1.43.4",
     "tslib": "^2.3.1",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.4"
   }
 }
