--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@tsconfig/svelte": "^2.0.1",
     "sass": "^1.43.4",
+    "svelte": "^3.35.0",
     "tslib": "^2.3.1",
     "typescript": "^4.4.4"
   },
