--- a/packages/smui-theme/package.json
+++ b/packages/smui-theme/package.json
@@ -29,6 +29,45 @@
     "url": "https://github.com/hperrin/svelte-material-ui/issues"
   },
   "license": "Apache-2.0",
+  "devDependencies": {
+    "@smui/banner": "^5.0.0",
+    "@smui/button": "^5.0.0",
+    "@smui/card": "^5.0.0",
+    "@smui/checkbox": "^5.0.0",
+    "@smui/chips": "^5.0.0",
+    "@smui/circular-progress": "^5.0.0",
+    "@smui/data-table": "^5.0.0",
+    "@smui/dialog": "^5.0.0",
+    "@smui/drawer": "^5.0.0",
+    "@smui/fab": "^5.0.0",
+    "@smui/floating-label": "^5.0.0",
+    "@smui/form-field": "^5.0.0",
+    "@smui/icon-button": "^5.0.0",
+    "@smui/image-list": "^5.0.0",
+    "@smui/layout-grid": "^5.0.0",
+    "@smui/line-ripple": "^5.0.0",
+    "@smui/linear-progress": "^5.0.0",
+    "@smui/list": "^5.0.0",
+    "@smui/menu": "^5.0.0",
+    "@smui/menu-surface": "^5.0.0",
+    "@smui/notched-outline": "^5.0.0",
+    "@smui/paper": "^5.0.0",
+    "@smui/radio": "^5.0.0",
+    "@smui/ripple": "^5.0.0",
+    "@smui/segmented-button": "^5.0.0",
+    "@smui/select": "^5.0.0",
+    "@smui/slider": "^5.0.0",
+    "@smui/snackbar": "^5.0.0",
+    "@smui/switch": "^5.0.0",
+    "@smui/tab": "^5.0.0",
+    "@smui/tab-bar": "^5.0.0",
+    "@smui/tab-indicator": "^5.0.0",
+    "@smui/tab-scroller": "^5.0.0",
+    "@smui/textfield": "^5.0.0",
+    "@smui/tooltip": "^5.0.0",
+    "@smui/top-app-bar": "^5.0.0",
+    "@smui/touch-target": "^5.0.0"
+  },
   "dependencies": {
     "node-fetch": "^2.6.1",
     "sass": "^1.43.4",
