--- a/packages/data-table/package.json
+++ b/packages/data-table/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "build": "npm run build:js && npm run build:sass",
     "build:js": "tsc",
-    "build:sass": "sass --no-source-map -I node_modules -I ../../node_modules _style.scss bare.css",
+    "build:sass": "sass --no-source-map -I node_modules -I ../smui-theme/node_modules  -I ../../node_modules _style.scss bare.css",
     "clean": "git status --ignored -u --porcelain . | grep -v node_modules/ | grep -e '^!! ' | sed 's/^!! packages\\/[a-z-]*\\///g' | tr '\\n' ' ' | xargs rm",
     "prepare": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -41,6 +41,7 @@
     "@smui/common": "^5.0.0",
     "@smui/icon-button": "^5.0.0",
     "@smui/ripple": "^5.0.0",
+    "@smui/select": "^5.0.0",
     "svelte2tsx": "^0.4.8"
   },
   "devDependencies": {
