chore: update packages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svelte-material-ui",
-  "version": "5.0.1",
+  "version": "6.0.0-beta.0",
   "description": "Svelte Material UI Components",
   "keywords": [
     "svelte",
@@ -22,8 +22,7 @@
     "pages:build": "cd packages/site && npm run build && cd ../..",
     "pages:push": "git add -f packages/site/build && git commit -m 'chore: update built files' && git push origin $(git subtree split --prefix packages/site/build master):gh-pages --force && git reset --hard HEAD^",
     "prepare": "husky install && npm run build:css",
-    "build:css": "echo \"temporarily disabled for development\"",
-    "TEMP-DISABLED-build:css": "smui-theme compile bare.css",
+    "build:css": "smui-theme compile bare.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "files": [
@@ -38,48 +37,45 @@
     "url": "https://github.com/hperrin/svelte-material-ui/issues"
   },
   "license": "Apache-2.0",
-  "TEMP-DISABLED-dependencies": {
-    "@smui/banner": "5.0.1",
-    "@smui/button": "5.0.1",
-    "@smui/card": "5.0.1",
-    "@smui/checkbox": "5.0.1",
-    "@smui/chips": "5.0.1",
-    "@smui/circular-progress": "5.0.1",
-    "@smui/common": "5.0.1",
-    "@smui/data-table": "5.0.1",
-    "@smui/dialog": "5.0.1",
-    "@smui/drawer": "5.0.1",
-    "@smui/fab": "5.0.1",
-    "@smui/floating-label": "5.0.1",
-    "@smui/form-field": "5.0.1",
-    "@smui/icon-button": "5.0.1",
-    "@smui/image-list": "5.0.1",
-    "@smui/layout-grid": "5.0.1",
-    "@smui/line-ripple": "5.0.1",
-    "@smui/linear-progress": "5.0.1",
-    "@smui/list": "5.0.1",
-    "@smui/menu": "5.0.1",
-    "@smui/menu-surface": "5.0.1",
-    "@smui/notched-outline": "5.0.1",
-    "@smui/paper": "5.0.1",
-    "@smui/radio": "5.0.1",
-    "@smui/ripple": "5.0.1",
-    "@smui/segmented-button": "5.0.1",
-    "@smui/select": "5.0.1",
-    "@smui/slider": "5.0.1",
-    "@smui/snackbar": "5.0.1",
-    "@smui/switch": "5.0.1",
-    "@smui/tab": "5.0.1",
-    "@smui/tab-bar": "5.0.1",
-    "@smui/tab-indicator": "5.0.1",
-    "@smui/tab-scroller": "5.0.1",
-    "@smui/textfield": "5.0.1",
-    "@smui/tooltip": "5.0.1",
-    "@smui/top-app-bar": "5.0.1",
-    "@smui/touch-target": "5.0.1"
-  },
-  "TEMP-DISABLED-devDependencies": {
-    "smui-theme": "file:packages/smui-theme"
+  "dependencies": {
+    "@smui/banner": "6.0.0-beta.0",
+    "@smui/button": "6.0.0-beta.0",
+    "@smui/card": "6.0.0-beta.0",
+    "@smui/checkbox": "6.0.0-beta.0",
+    "@smui/chips": "6.0.0-beta.0",
+    "@smui/circular-progress": "6.0.0-beta.0",
+    "@smui/common": "6.0.0-beta.0",
+    "@smui/data-table": "6.0.0-beta.0",
+    "@smui/dialog": "6.0.0-beta.0",
+    "@smui/drawer": "6.0.0-beta.0",
+    "@smui/fab": "6.0.0-beta.0",
+    "@smui/floating-label": "6.0.0-beta.0",
+    "@smui/form-field": "6.0.0-beta.0",
+    "@smui/icon-button": "6.0.0-beta.0",
+    "@smui/image-list": "6.0.0-beta.0",
+    "@smui/layout-grid": "6.0.0-beta.0",
+    "@smui/line-ripple": "6.0.0-beta.0",
+    "@smui/linear-progress": "6.0.0-beta.0",
+    "@smui/list": "6.0.0-beta.0",
+    "@smui/menu": "6.0.0-beta.0",
+    "@smui/menu-surface": "6.0.0-beta.0",
+    "@smui/notched-outline": "6.0.0-beta.0",
+    "@smui/paper": "6.0.0-beta.0",
+    "@smui/radio": "6.0.0-beta.0",
+    "@smui/ripple": "6.0.0-beta.0",
+    "@smui/segmented-button": "6.0.0-beta.0",
+    "@smui/select": "6.0.0-beta.0",
+    "@smui/slider": "6.0.0-beta.0",
+    "@smui/snackbar": "6.0.0-beta.0",
+    "@smui/switch": "6.0.0-beta.0",
+    "@smui/tab": "6.0.0-beta.0",
+    "@smui/tab-bar": "6.0.0-beta.0",
+    "@smui/tab-indicator": "6.0.0-beta.0",
+    "@smui/tab-scroller": "6.0.0-beta.0",
+    "@smui/textfield": "6.0.0-beta.0",
+    "@smui/tooltip": "6.0.0-beta.0",
+    "@smui/top-app-bar": "6.0.0-beta.0",
+    "@smui/touch-target": "6.0.0-beta.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^14.1.0",
@@ -89,6 +85,7 @@
     "prettier": "~2.4.1",
     "prettier-plugin-svelte": "^2.4.0",
     "sass": "^1.43.4",
+    "smui-theme": "file:packages/smui-theme",
     "svelte": "^3.35.0",
     "svelte-check": "^2.2.8"
   }
