--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "svelte-material-ui",
-  "version": "6.0.0-beta.0",
+  "name": "svelte-material-ui-dev",
+  "version": "dev",
   "description": "Svelte Material UI Components",
   "keywords": [
     "svelte",
@@ -14,20 +14,15 @@
   "scripts": {
     "bootstrap": "lerna bootstrap --hoist --nohoist \"@tsconfig/svelte\"",
     "check": "lerna exec svelte-check",
-    "clean": "lerna run clean && npm run clean:css",
-    "clean:css": "test -f bare.css && rm -r bare.css || true",
+    "clean": "lerna run clean",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. .",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
     "pages": "npm run bootstrap && npm run pages:build && npm run pages:push",
     "pages:build": "cd packages/site && npm run build && cd ../..",
     "pages:push": "git add -f packages/site/build && git commit -m 'chore: update built files' && git push origin $(git subtree split --prefix packages/site/build master):gh-pages --force && git reset --hard HEAD^",
-    "prepare": "husky install && npm run build:css",
-    "build:css": "smui-theme compile bare.css",
+    "prepare": "husky install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "files": [
-    "bare.css"
-  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hperrin/svelte-material-ui.git"
@@ -37,56 +32,15 @@
     "url": "https://github.com/hperrin/svelte-material-ui/issues"
   },
   "license": "Apache-2.0",
-  "dependencies": {
-    "@smui/banner": "6.0.0-beta.0",
-    "@smui/button": "6.0.0-beta.0",
-    "@smui/card": "6.0.0-beta.0",
-    "@smui/checkbox": "6.0.0-beta.0",
-    "@smui/chips": "6.0.0-beta.0",
-    "@smui/circular-progress": "6.0.0-beta.0",
-    "@smui/common": "6.0.0-beta.0",
-    "@smui/data-table": "6.0.0-beta.0",
-    "@smui/dialog": "6.0.0-beta.0",
-    "@smui/drawer": "6.0.0-beta.0",
-    "@smui/fab": "6.0.0-beta.0",
-    "@smui/floating-label": "6.0.0-beta.0",
-    "@smui/form-field": "6.0.0-beta.0",
-    "@smui/icon-button": "6.0.0-beta.0",
-    "@smui/image-list": "6.0.0-beta.0",
-    "@smui/layout-grid": "6.0.0-beta.0",
-    "@smui/line-ripple": "6.0.0-beta.0",
-    "@smui/linear-progress": "6.0.0-beta.0",
-    "@smui/list": "6.0.0-beta.0",
-    "@smui/menu": "6.0.0-beta.0",
-    "@smui/menu-surface": "6.0.0-beta.0",
-    "@smui/notched-outline": "6.0.0-beta.0",
-    "@smui/paper": "6.0.0-beta.0",
-    "@smui/radio": "6.0.0-beta.0",
-    "@smui/ripple": "6.0.0-beta.0",
-    "@smui/segmented-button": "6.0.0-beta.0",
-    "@smui/select": "6.0.0-beta.0",
-    "@smui/slider": "6.0.0-beta.0",
-    "@smui/snackbar": "6.0.0-beta.0",
-    "@smui/switch": "6.0.0-beta.0",
-    "@smui/tab": "6.0.0-beta.0",
-    "@smui/tab-bar": "6.0.0-beta.0",
-    "@smui/tab-indicator": "6.0.0-beta.0",
-    "@smui/tab-scroller": "6.0.0-beta.0",
-    "@smui/textfield": "6.0.0-beta.0",
-    "@smui/tooltip": "6.0.0-beta.0",
-    "@smui/top-app-bar": "6.0.0-beta.0",
-    "@smui/touch-target": "6.0.0-beta.0"
-  },
   "devDependencies": {
-    "@commitlint/cli": "^14.1.0",
-    "@commitlint/config-conventional": "^14.1.0",
+    "@commitlint/cli": "^15.0.0",
+    "@commitlint/config-conventional": "^15.0.0",
     "husky": "^7.0.4",
     "lerna": "^4.0.0",
     "prettier": "~2.4.1",
-    "prettier-plugin-svelte": "^2.4.0",
+    "prettier-plugin-svelte": "^2.5.0",
     "sass": "^1.43.4",
-    "smui-theme": "file:packages/smui-theme",
-    "svelte": "^3.35.0",
-    "svelte-check": "^2.2.8"
+    "svelte": "^3.44.1",
+    "svelte-check": "^2.2.10"
   }
 }
