--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -55,19 +55,15 @@
     "url": "https://github.com/hperrin/svelte-material-ui/issues"
   },
   "license": "Apache-2.0",
-  "peerDependencies": {
-    "svelte": "^3.35.0"
-  },
   "devDependencies": {
     "@tsconfig/svelte": "^2.0.1",
     "sass": "^1.43.4",
-    "svelte": "^3.35.0",
     "svelte-strip": "^1.0.0",
     "tslib": "^2.3.1",
-    "typescript": "^4.4.4"
+    "typescript": "~4.4.4"
   },
   "dependencies": {
     "@material/dom": "^13.0.0",
-    "svelte2tsx": "^0.4.8"
+    "svelte2tsx": "^0.4.10"
   }
 }
