--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -9,10 +9,10 @@
     "clean": "test -d .svelte-kit && rm -r .svelte-kit || true",
     "preview": "svelte-kit preview",
     "prepare": "npm run smui-theme-light && npm run smui-theme-dark && npm run site-light && npm run site-dark",
-    "smui-theme-light": "smui-theme compile static/smui.css -s expanded -i src/theme  -i node_modules/",
-    "smui-theme-dark": "smui-theme compile static/smui-dark.css -s expanded -i src/theme/dark  -i node_modules/",
-    "site-light": "sass --no-source-map -I src/theme -I node_modules -I ../smui-theme/node_modules  -I ../../node_modules src/site.scss static/site.css",
-    "site-dark": "sass --no-source-map -I src/theme/dark -I node_modules -I ../smui-theme/node_modules  -I ../../node_modules src/site.scss static/site-dark.css",
+    "smui-theme-light": "smui-theme compile static/smui.css -s expanded -i src/theme -i node_modules/",
+    "smui-theme-dark": "smui-theme compile static/smui-dark.css -s expanded -i src/theme/dark -i node_modules/",
+    "site-light": "sass --no-source-map -I src/theme -I node_modules -I ../smui-theme/node_modules -I ../../node_modules src/site.scss static/site.css",
+    "site-dark": "sass --no-source-map -I src/theme/dark -I node_modules -I ../smui-theme/node_modules -I ../../node_modules src/site.scss static/site-dark.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "publishConfig": {
@@ -83,11 +83,10 @@
     "remark-slug": "^7.0.1",
     "sass": "^1.43.4",
     "smui-theme": "^6.0.0-beta.0",
-    "svelte": "^3.35.0",
     "svelte-preprocess": "^4.9.8",
     "tinygesture": "^1.1.4",
     "tslib": "^2.3.1",
-    "typescript": "^4.4.4",
+    "typescript": "~4.4.4",
     "vite": "^2.6.14"
   }
 }
