feat: new badge component

--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -77,6 +77,7 @@
     "@smui/tooltip": "^6.0.0-beta.4",
     "@smui/top-app-bar": "^6.0.0-beta.4",
     "@smui/touch-target": "^6.0.0-beta.4",
+    "@smui-extra/badge": "^6.0.0-beta.4",
     "@sveltejs/adapter-static": "next",
     "@sveltejs/kit": "next",
     "mdsvex": "^0.9.8",
