--- a/packages/smui-theme/package.json
+++ b/packages/smui-theme/package.json
@@ -66,7 +66,8 @@
     "@smui/textfield": "^6.0.0-beta.4",
     "@smui/tooltip": "^6.0.0-beta.4",
     "@smui/top-app-bar": "^6.0.0-beta.4",
-    "@smui/touch-target": "^6.0.0-beta.4"
+    "@smui/touch-target": "^6.0.0-beta.4",
+    "@smui-extra/badge": "^6.0.0-beta.4"
   },
   "dependencies": {
     "node-fetch": "^2.6.1",
